<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityA">

    <Button
        android:id="@+id/next"
        style="@style/myButton"
        android:onClick="clickButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sharedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sharedtext"
        app:layout_constraintBottom_toTopOf="@id/filePath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/filePath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/filepath"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toStartOf="@id/choose"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sharedText" />

    <Button
        android:id="@+id/choose"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_shape"
        android:onClick="chooseFile"
        android:text="@string/choose"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/filePath" />

    <Button
        android:id="@+id/email"
        style="@style/buttonMail"
        android:onClick="sendEmail"
        android:text="@string/send_via_email"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toStartOf="@id/gmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filePath" />

    <Button
        android:id="@+id/gmail"
        style="@style/buttonMail"
        android:onClick="sendGmail"
        android:text="@string/send_via_gmail"
        app:layout_constraintBaseline_toBaselineOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/email" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabBackground="@color/Salmon"
        app:tabGravity="fill"
        app:tabIndicatorHeight="4dp"
        app:tabInlineLabel="false"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed">

        <android.support.design.widget.TabItem
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_2" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_3" />

    </android.support.design.widget.TabLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:srcCompat="@color/MistyRose" />


</android.support.constraint.ConstraintLayout>